--- a/Boutique-FE/src/app/bridalCostumesFolder/view-bridal-costumes/view-bridal-costumes.component.html
+++ b/Boutique-FE/src/app/bridalCostumesFolder/view-bridal-costumes/view-bridal-costumes.component.html
@@ -94,6 +94,7 @@
         </div>
       </div>
 
+
       <!-- Customization -->
       <div class="customization">
         <h3>Customization</h3>
@@ -101,6 +102,11 @@
           [(ngModel)]="customText"
           placeholder="Enter customization details..."
         ></textarea>
+      </div>
+
+      <div class="stock-status">
+        <p *ngIf="itemData.stock > 0" class="in-stock">  In Stock ({{ itemData.stock }}) </p>
+        <p *ngIf="itemData.stock === 0" class="out-of-stock">Out of Stock</p>
       </div>
   
       <!-- Quantity & Actions -->
