--- a/Boutique-FE/src/app/familyComboFolder/view-family-combo/view-family-combo.component.html
+++ b/Boutique-FE/src/app/familyComboFolder/view-family-combo/view-family-combo.component.html
@@ -112,6 +112,11 @@
           placeholder="Enter customization details..."
         ></textarea>
       </div>
+
+      <div class="stock-status">
+        <p *ngIf="itemData.stock > 0" class="in-stock">  In Stock ({{ itemData.stock }}) </p>
+        <p *ngIf="itemData.stock === 0" class="out-of-stock">Out of Stock</p>
+      </div>
   
       <!-- Quantity & Actions -->
       <div class="actions">
