--- a/Boutique-FE/src/app/cousinsSquardFolder/view-cousins-squard/view-cousins-squard.component.html
+++ b/Boutique-FE/src/app/cousinsSquardFolder/view-cousins-squard/view-cousins-squard.component.html
@@ -113,6 +113,10 @@
         ></textarea>
       </div>
   
+      <div class="stock-status">
+        <p *ngIf="itemData.stock > 0" class="in-stock">  In Stock ({{ itemData.stock }}) </p>
+        <p *ngIf="itemData.stock === 0" class="out-of-stock">Out of Stock</p>
+      </div>
       <!-- Quantity & Actions -->
       <div class="actions">
         <div class="quantity-control">
