changes made in share icon

--- a/Boutique-FE/src/app/cousinsSquardFolder/view-cousins-squard/view-cousins-squard.component.html
+++ b/Boutique-FE/src/app/cousinsSquardFolder/view-cousins-squard/view-cousins-squard.component.html
@@ -16,6 +16,10 @@
     <div class="image-gallery">
       <!-- Large Display Image -->
       <div class="featured-image">
+
+        <div class="share-icon" (click)="shareImage()">
+          <i class="fas fa-share-alt"></i> 
+        </div>
         <img [src]="url + itemData.imageUrl[currentIndex]" alt="Gallery Image" class="featured-img" />
         <a href="https://app.epatrolz.com" class="hover-link" target="_blank">https://app.epatrolz.com</a>
         <!-- Navigation Buttons (only if multiple images exist) -->
