--- a/Boutique-FE/src/app/officewears/viewofficewear/viewofficewear.component.html
+++ b/Boutique-FE/src/app/officewears/viewofficewear/viewofficewear.component.html
@@ -27,7 +27,7 @@
         />
       </div>
     
-      <a href="https://app.epatrolz.com" class="hover-link" target="_blank">https://app.epatrolz.com</a>
+      <a class="hover-link" target="_blank">{{itemData.vedioLink}}</a>
     
       <!-- Indicator Dots -->
       <div class="indicator-container">
